# Megano

./: .env.dist  .gitignore  .gitlab-ci.yml  .pylintrc  README.md  pyproject.toml
market/: load_fixtures.py
market/accounts/: admin.py  forms.py  group_mixins.py  models.py  service.py  tests.py  urls.py  views.py
market/cart/: admin.py  cart.py  forms.py  models.py  urls.py  views.py
market/comparison/: admin.py  models.py  services.py  urls.py  views.py
market/config/: __init__.py  celery.py  settings.py  urls.py
market/context_processors/: cart_context.py  categories_context.py  comparison_context.py
market/discounts/: admin.py  mixins.py  models.py  services.py  tests.py  urls.py  views.py
market/docs/: Sheet1.csv
market/fixtures/: 01-groups.json  02-users.json  04-shops.json  05-categories.json  06-tags.json  07-products.json  08-offers.json  09-discounts_product.json  10-discounts_set.json  11-discounts_cart.json  14-images.json  15-banners.json  group-Buer.json  group-Seller.json  group_permissions.json  products.json  tags.json
market/fixturies/: categories.json
market/importer/: common_utils.py  models.py  tasks.py  urls.py  views.py
market/imports/: admin.py  apps.py  common_utils.py  models.py  tasks.py  urls.py  views.py
market/order/: forms.py  models.py  service.py  urls.py  views.py
market/payment/: models.py
market/products/: admin.py  constants.py  filters.py  forms.py  models.py  services.py  signals.py  tasks.py  urls.py  views.py
market/settings_app/: admin.py  apps.py  forms.py  models.py  urls.py  (+2 more)
signals/: signlas.py
(+103 files in other folders)
